src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <globalPicklist>SBQQ__BillingFrequency</globalPicklist>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is contracted.</description>
        <inlineHelpText>Indicates if the order is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerm__c</fullName>
        <description>The payment term for this order.</description>
        <globalPicklist>SBQQ__PaymentTerm</globalPicklist>
        <inlineHelpText>The payment term for this order.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote where the order is created from.</description>
        <inlineHelpText>The quote where the order is created from.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>